--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,16 +5,13 @@ version.workspace = true
 edition.workspace = true
 rust-version.workspace = true
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-itertools.workspace = true
-thiserror.workspace = true
-
-fixed-hash = "0.8"
 blake2 = "0.10"
+fixed-hash = "0.8"
+itertools = "0.10"
+thiserror = "1.0"
 
 [dev-dependencies]
-rstest.workspace = true
+rstest = "0.17"
 rand = "0.8"
 rand_chacha = "0.3"
