--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,21 +1,21 @@
 [package]
 name = "merkletree"
-license.workspace = true
-version.workspace = true
-edition.workspace = true
-rust-version.workspace = true
+edition = "2021"
+rust-version = "1.75"
+version = "0.1.0"
+license = "MIT"
 
 [features]
 scale-codec = ["dep:parity-scale-codec"]
 
 [dependencies]
-itertools.workspace = true
-parity-scale-codec = { workspace = true, optional = true }
-thiserror.workspace = true
+itertools = "0.12"
+parity-scale-codec = { version = "3.1", optional = true }
+thiserror = "1.0"
 
 [dev-dependencies]
-blake2.workspace = true
-fixed-hash.workspace = true
-rand.workspace = true
-rand_chacha.workspace = true
-rstest.workspace = true
+blake2 = "0.10"
+fixed-hash = "0.8"
+rand = "0.8"
+rand_chacha = "0.3"
+rstest = "0.19"
